add evaluation methods

--- a/docs/paper/library.bib
+++ b/docs/paper/library.bib
@@ -100,3 +100,21 @@
   url = {https://rstudio.github.io/renv/},
 }
 
+@article{bracherEvaluatingEpidemicForecasts2021,
+  title = {Evaluating Epidemic Forecasts in an Interval Format},
+  author = {Bracher, Johannes and Ray, Evan L. and Gneiting, Tilmann and Reich, Nicholas G.},
+  date = {2021-02},
+  journaltitle = {PLoS computational biology},
+  shortjournal = {PLoS Comput Biol},
+  volume = {17},
+  number = {2},
+  eprint = {33577550},
+  eprinttype = {pmid},
+  pages = {e1008618},
+  issn = {1553-7358},
+  doi = {10.1371/journal.pcbi.1008618},
+  langid = {english},
+  pmcid = {PMC7880475},
+  keywords = {Communicable Diseases,COVID-19,Forecasting,Humans,Pandemics,Probability,SARS-CoV-2},
+  file = {/mnt/data/github-synced/zotero-nikos/storage/EX37R6J8/Bracher et al. - 2021 - Evaluating epidemic forecasts in an interval forma.pdf}
+}
